# journal-imager

./: .gitignore  README.md  journal_imager.ipynb  pyproject.toml
src/journal_imager/: app.py  generate_image.py  get_salient_words.py  load_glove.py  update_journal.py
src/journal_imager/journal_entries/2023-05-25/: entries.txt
tests/: test_update_journal.py
