[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal_imager"
version = "0.0.2"
authors = [
  { name="Konrad Mikalauskas", email="konradas.mikalauskas@student.uva.nl" },
]
description = "A Python-based journaling app that uses NLP techniques to evaluate users' inputs and generate 'summary images' using a generative AI model."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Programming-The-Next-Step-2023/journal_imager"
"Bug Tracker" = "https://github.com/Programming-The-Next-Step-2023/journal_imager/issues"