[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal_imager"
version = "0.1.0"
authors = [
  { name="Konrad Mikalauskas", email="konradas.mikalauskas@student.uva.nl" },
]
description = "A Python-based journaling app that allows users to record daily journal entries and generate unique images based on these entries."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Programming-The-Next-Step-2023/journal_imager"
"Bug Tracker" = "https://github.com/Programming-The-Next-Step-2023/journal_imager/issues"